Basic Home Page
This is the start of the basic home page and some basic CSS to style the page.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>bhuynh8.github.io</title>
 </head>
 <body>
-    <h1>This is the first heading for my website!</h1>
+    <header>
+        <nav class="nav-container">
+            <div class="item">About me</div>
+            <div class="item">Skills</div>
+            <div class="item">Blog</div>
+            <div class="item">Contact</div>
+        </nav>
+        <hr>
+        
+    </header>
+    <main>
+        <div class="nameMessage">
+            <div class="name">
+                <h1>Brendan</h1>
+                <h1>Huynh</h1>
+            </div>
+            <div class="message">
+                <p>
+                    Welcome to my page. this is a bunch of test 
+                    text to try to see how it reacts on the page.
+                </p>
+            </div>
+        </div>
+        
+        <hr>
+    </main>
+    <footer>
+        <p>2022 Brendan Huynh</p>
+        <script>
+            document.write("Last Modified On: " + document.lastModified);
+        </script>
+    </footer>
 </body>
 </html>
