Basic CSS completed
Basic CSS for my page

--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
     <main>
         <div class="nameMessage">
             <div class="name">
-                <h1>Brendan</h1>
-                <h1>Huynh</h1>
+                <h1>Brendan Huynh</h1>
             </div>
             <div class="message">
                 <p>
                     Welcome to my page. this is a bunch of test 
                     text to try to see how it reacts on the page.
+                </p>
+            </div>
+
+            <div class="secondMessage">
+                <p>
+                    I hope you find what you are looking for.
                 </p>
             </div>
         </div>
