Main Page Complete
Main page HTML has been completed. Worked on creating CSS

--- a/index.html
+++ b/index.html
@@ -36,7 +36,32 @@
                 </p>
             </div>
         </div>
-        
+        <div class="page-nav">
+            <div class="page-item">
+                <h2>About Me</h2>
+                <p>Learn more about me and who I am</p>
+            </div>
+            <div class="page-item">
+                <h2>Skills</h2>
+                <p>What I can do</p>
+            </div>
+            <div class="page-item">
+                <h2>Portfolio</h2>
+                <p>See what I have done</p>
+            </div>
+            <div class="page-item">
+                <h2>Resume</h2>
+                <p>My work experience</p>
+            </div>
+            <div class="page-item">
+                <h2>Blog</h2>
+                <p>Read something new!</p>
+            </div>
+            <div class="page-item">
+                <h2>Contact</h2>
+                <p>How to reach me</p>
+            </div>
+        </div>
         <hr>
     </main>
     <footer>
